
cabal-version: 1.12

name:           life
version:        0.0.0.0
author:         Nom de l'estudiant
build-type:     Simple

executable life
  main-is:
    life.hs
  other-modules:
    Life.Board
    Life.Draw
  build-depends:
    base >=4.7 && <5,
    aeson,
    containers,
    drawing-activity >=0.2,
    drawing-core >=0.1,
    text,
    bytestring
  default-language: Haskell2010

