
name:                datfw-core
version:             0.2.0.0
-- synopsis:
-- description:
-- license:
-- license-file:     LICENSE
author:              Jordi Forga
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >= 1.10

tested-with:
    GHC == 8.10.7
    GHC == 9.2.8
    GHC == 9.6.7
    GHC == 9.10.3

library
  exposed-modules:   Develop.DatFw, Develop.DatFw.Dispatch, Develop.DatFw.Handler,
                     Develop.DatFw.Widget, Develop.DatFw.Content,
                     Develop.DatFw.Template
                     Develop.DatFw.Form, Develop.DatFw.Form.Fields
  other-modules:
                     Develop.DatFw.Internal.Types, Develop.DatFw.Internal.Classes, Develop.DatFw.Internal.Handler,
                     Develop.DatFw.Internal.Dispatch, Develop.DatFw.Internal.Routing,
                     Develop.DatFw.Template.Conversions, Develop.DatFw.Template.Types,
                     Develop.DatFw.Template.ExprParsers, Develop.DatFw.Template.DocParsers

  build-depends:     base >= 4.9 && < 5
                     , aeson, blaze-html
                     , bytestring, containers
                     , cookie, http-types
                     , parsec
                     , template-haskell, text
                     , time
                     , transformers
                     , wai, wai-extra

  hs-source-dirs:    src

  default-language:  Haskell2010

  default-extensions:  DoAndIfThenElse, CPP,
                       RankNTypes, TypeFamilies, MultiParamTypeClasses, FlexibleInstances, FlexibleContexts, DefaultSignatures,
                       TypeOperators

