
cabal-version: 1.12

name:           drawing-activity
version:        0.2.1.0
--- description:    Please see the README on GitHub at <https://github.com/githubuser/drawing#readme>
author:         Jordi Forga Alberich
maintainer:     jordi.forga@upc.edu
copyright:      2022 Jordi Forga-Alberich
license:        BSD3
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    static/index.html
    static/bootstrap.4.1.3.min.css

flag TestStableNamed
  Description: Test the equality of StableNamed values.
               To enable this flag from 'stack', enter:
                 'stack build --flag drawing-activity:TestStableNamed'
  Default:     False
  Manual:      True

flag PrintMessages
  Description: Print the messages passed to the update function.
               To enable this flag from 'stack', enter:
                 'stack build --flag drawing-activity:PrintMessages'
  Default:     False
  Manual:      True

library
  exposed-modules:
      Drawing.Activity
      Drawing.Activity.StableNamed
      Drawing.Activity.Timer
  other-modules:
      Drawing.Activity.Internal.Event
  hs-source-dirs:
      src
  build-depends:
    base >=4.7 && <5
    , aeson
    , bytestring
    , containers
    , drawing-core >=0.1.2
    , http-types
    , jsaddle
    , jsaddle-warp-extra
    , miso
    , mtl
    , text
    , time
  default-language: Haskell2010
  if flag(TestStableNamed)
    CPP-Options: -DTEST_STABLENAMED
  if flag(PrintMessages)
    CPP-Options: -DPRINT_MESSAGES

